csharp/src/AamNative.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace AamCsharp
{
    internal static unsafe partial class AamNative
    {
        const string __DllName = "aam_rs";





        /// <summary>
        ///  Creates a new AAML handle with all default commands registered.
        ///
        ///  Returns `NULL` only if the allocator is out of memory.
        ///  The caller **must** free the handle with [`aam_free`] when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AamlHandle* aam_new();

        /// <summary>
        ///  Frees an AAML handle previously created by [`aam_new`].
        ///
        ///  No-op when `handle` is `NULL`.
        ///
        ///  # Safety
        ///  `handle` must be a valid pointer returned by [`aam_new`] and must not be
        ///  used again after this call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void aam_free(AamlHandle* handle);

        /// <summary>
        ///  Parses AAML content from a null-terminated C string and replaces the
        ///  current state of `handle` with the result.
        ///
        ///  Returns `0` on success and `-1` on error. On error, [`aam_last_error`]
        ///  returns a human-readable description.
        ///
        ///  # Safety
        ///  Both `handle` and `content` must be valid non-null pointers.
        ///  `content` must point to a null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_parse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int aam_parse(AamlHandle* handle, byte* content);

        /// <summary>
        ///  Loads an AAML file from disk and replaces the current state of `handle`.
        ///
        ///  Returns `0` on success and `-1` on error. On error, [`aam_last_error`]
        ///  returns a human-readable description.
        ///
        ///  # Safety
        ///  Both `handle` and `path` must be valid non-null pointers.
        ///  `path` must point to a null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int aam_load(AamlHandle* handle, byte* path);

        /// <summary>
        ///  Parses AAML content and *merges* it into the existing state of `handle`
        ///  without resetting previously loaded keys.
        ///
        ///  Returns `0` on success and `-1` on error.
        ///
        ///  # Safety
        ///  Both `handle` and `content` must be valid non-null pointers.
        ///  `content` must point to a null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_merge", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int aam_merge(AamlHandle* handle, byte* content);

        /// <summary>
        ///  Looks up `key` in the AAML map (forward lookup, then reverse lookup).
        ///
        ///  Returns a newly heap-allocated null-terminated C string that **must** be
        ///  freed with [`aam_string_free`], or `NULL` if the key was not found.
        ///
        ///  # Safety
        ///  Both `handle` and `key` must be valid non-null pointers.
        ///  `key` must point to a null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_find_obj", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* aam_find_obj(AamlHandle* handle, byte* key);

        /// <summary>
        ///  Reverse lookup: finds the *key* whose stored value equals `value`.
        ///
        ///  Returns a newly heap-allocated null-terminated C string that **must** be
        ///  freed with [`aam_string_free`], or `NULL` if no matching key exists.
        ///
        ///  # Safety
        ///  Both `handle` and `value` must be valid non-null pointers.
        ///  `value` must point to a null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_find_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* aam_find_key(AamlHandle* handle, byte* value);

        /// <summary>
        ///  Deep lookup: follows the chain `key → value → key` until a terminal value
        ///  is reached or a cycle is detected.
        ///
        ///  Returns a newly heap-allocated null-terminated C string that **must** be
        ///  freed with [`aam_string_free`], or `NULL` if the chain is empty.
        ///
        ///  # Safety
        ///  Both `handle` and `key` must be valid non-null pointers.
        ///  `key` must point to a null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_find_deep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* aam_find_deep(AamlHandle* handle, byte* key);

        /// <summary>
        ///  Frees a C string returned by any `aam_find_*` function.
        ///
        ///  No-op when `s` is `NULL`.
        ///
        ///  # Safety
        ///  `s` must be a pointer previously returned by [`aam_find_obj`],
        ///  [`aam_find_key`], or [`aam_find_deep`], and must not have been freed already.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_string_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void aam_string_free(byte* s);

        /// <summary>
        ///  Returns a pointer to the last error message stored in `handle`, or `NULL`
        ///  if the previous operation succeeded.
        ///
        ///  The returned pointer is owned by `handle` and remains valid only until the
        ///  next API call on that handle. **Do not** free it with [`aam_string_free`].
        ///
        ///  # Safety
        ///  `handle` must be a valid non-null pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "aam_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* aam_last_error(AamlHandle* handle);


    }

    /// <summary>
    ///  Opaque handle to an AAML parser instance.
    ///
    ///  Always create via [`aam_new`] and destroy via [`aam_free`].
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct AamlHandle
    {
    }



}
